package maidsafe.vault.proto;
option optimize_for = LITE_RUNTIME;

enum kIdentityType {
  MaidAccoutHolder = 0;
  MetaDataManager = 1;
  PmidAccountHolder = 3;
  DataHolder = 4;
}

enum kActionType {
  Get = 0;
  Put = 1;
  Post = 2;
  Delete = 3;
}

enum kDataType {
  ImmutableData = 0;
  MutableData = 1;
  SignatureData = 2;
}

message Nfs {
  required kActionType = 0;
  required KIdentityType = 1;
  required kDataType = 2;
  required bytes destination = 3;
  required bytes Source = 4;
  required bytes content = 5;
}
