package maidsafe.vault.protobuf;
option optimize_for = LITE_RUNTIME;

// MPID Account Holder to Metadata Manager
// MPID Account Holder to MPID ??
message NodeDown {
  required bytes node_id = 1;
}

message NodeUp {
  required bytes node_id = 1;
}
